--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <div class="wrap-icon">
                         <img src="boxer images/classic1copy.png" class="illustration_img">
                     </div>
-                    <div class="nothing nothing2"></div>
+                    <!-- <div class="nothing nothing2"></div> -->
                 </div>
         
               </div>
