--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                     </div>
                                 </div>
                                 <div class="wrap-cont-text-block-text">
-                                    <p class="wrap-cont-text-block-text-p" data-lang="delivery-all">Доставка по всей Беларуси</p>
+                                    <p class="wrap-cont-text-block-text-p" data-lang="delivery-all">Доставка осуществляется по всей Беларуси</p>
                                 </div>
                                 <div class="wrap-cont-text-block-btn">
                                     <a class="link_more" href="delivery.html">
